Fixed function checks in configure
git-svn-id: https://projects.nth-dimension.org.uk/subversion/smaSHeM/trunk@133 da283472-e30e-4bd4-a68d-706198139375

--- a/configure.ac
+++ b/configure.ac
@@ -33,7 +33,7 @@ fi
 # Checks for typedefs, structures, and compiler characteristics.
 
 # Checks for library functions.
-AC_CHECK_FUNCS([fprintf exit perror getopt shmat shmdt printf],, AC_MSG_ERROR([required standard library function missing]))
+AC_CHECK_FUNCS([fprintf exit perror getopt atoi strlen shmat shmdt printf],, AC_MSG_ERROR([required standard library function missing]))
 if test "x$with_qtgui" = "xyes"; then
   # only useful if we have QtGui
   AC_CHECK_FUNCS([malloc memset sprintf free],, AC_MSG_ERROR([optional but requested standard library function missing]))
