--- a/Makefile.in
+++ b/Makefile.in
@@ -279,7 +279,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign
-SUBDIRS = src doc
+SUBDIRS = src doc man
 all: all-recursive
 
 .SUFFIXES:
