Ran autoreconf --force --install
git-svn-id: https://projects.nth-dimension.org.uk/subversion/smaSHeM/trunk@145 da283472-e30e-4bd4-a68d-706198139375

--- a/configure.ac
+++ b/configure.ac
@@ -3,6 +3,7 @@
 
 AC_PREREQ([2.69])
 AC_INIT([smaSHeM], [0.3.9], [timb@nth-dimension.org.uk])
+AC_CONFIG_HEADERS([config.h:config.in])
 AC_CONFIG_SRCDIR([src/smaSHeM.h])
 AM_INIT_AUTOMAKE
 
