--- a/configure.ac
+++ b/configure.ac
@@ -2,8 +2,8 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
-AC_INIT([smaSHeM], [0.3.9], [timb@nth-dimension.org.uk])
-AC_CONFIG_HEADERS([config.h:config.in])
+AC_INIT([smaSHeM], [0.4], [timb@nth-dimension.org.uk])
+AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_SRCDIR([src/smaSHeM.h])
 AM_INIT_AUTOMAKE
 
