--- a/config.h.in
+++ b/config.h.in
@@ -1,4 +1,4 @@
-/* config.in.  Generated from configure.ac by autoheader.  */
+/* config.h.in.  Generated from configure.ac by autoheader.  */
 
 /* Define to 1 if you have the `atoi' function. */
 #undef HAVE_ATOI
