--- a/configure.ac
+++ b/configure.ac
@@ -39,7 +39,7 @@ fi
 AC_CHECK_FUNCS([fprintf exit perror getopt atoi strlen shmat shmdt printf],, AC_MSG_ERROR([required standard library function missing]))
 if test "x$with_qtgui" = "xyes"; then
   # only useful if we have QtGui
-  AC_CHECK_FUNCS([malloc memset sprintf free],, AC_MSG_ERROR([optional but requested standard library function missing]))
+  AC_CHECK_FUNCS([calloc sprintf free],, AC_MSG_ERROR([optional but requested standard library function missing]))
 fi
 
 AC_CONFIG_FILES([Makefile src/Makefile doc/Makefile man/Makefile])
