--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,9 @@ language: c
 compiler:
   - gcc
   - clang
-        
+
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y libqt4-dev
+
 script: ./configure && make
