Improved .travis.yml
git-svn-id: https://projects.nth-dimension.org.uk/subversion/smaSHeM/trunk@304 da283472-e30e-4bd4-a68d-706198139375

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ compiler:
 
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y automake pkg-config libqt4-dev
+  - sudo apt-get install -y automake autoconf pkg-config libqt4-dev
 
-script: ./configure && make
+script:
+  - autoreconf --force --install
+  - ./configure && make
